--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <div class="song-name" id="songName">Por el Resto de Mi Vida</div>
                         <div class="artist-name" id="artistName">Andrés Cepeda</div>
                     </div>
-                    <audio id="audioPlayer" src="Por el Resto de mi vida.mp3"></audio>
+                    <audio id="audioPlayer" src="por-el-resto-de-mi-vida.mp3"></audio>
                     <div class="player-controls">
                         <button class="play-pause-btn" id="playPauseBtn">▶️</button>
                     </div>
@@ -219,3 +219,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
